--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,11 @@
     <b>有任何建议或者反馈可以随时联系作者</b>
     </string>
     <string name="app_version_name">1.0.0</string>
+    <string name="exit_game">请问您是否确定要退出当前游戏？</string>
+    <string name="exit_msg">再按一次退出游戏！</string>
+    <string name="OK">确定</string>
+    <string name="Cancel">取消</string>
+    <string name="exit">退出游戏</string>
+    <string name="help">帮助</string>
+    <string name="get_coin">获取金币</string>
 </resources>
