--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="exit">退出游戏</string>
     <string name="help">帮助</string>
     <string name="get_coin">获取金币</string>
+    <string name="crash_msg">程序出现异常，即将重启！</string>
 </resources>
