--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="help">帮助</string>
     <string name="get_coin">获取金币</string>
     <string name="crash_msg">程序出现异常，即将重启！</string>
+    <string name="deleteMsg">历史记录已删除！</string>
 </resources>
